<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:text="组件类型 : "/>
            <CheckBox
                android:id="@+id/cb_gateway"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="网关"/>
            <CheckBox
                android:id="@+id/cb_sensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="传感器"/>
        </LinearLayout>
    </RadioGroup>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:text="查询条件 : "/>
            <CheckBox
                android:id="@+id/cb_model"
                android:layout_width="wrap_content"
                android:checked="true"
                android:layout_height="wrap_content"
                android:text="根据型号"/>
            <CheckBox
                android:id="@+id/cb_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="根据其他条件"/>
        </LinearLayout>
    </RadioGroup>
<!--    model-->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/ll_model"
        style="@style/search_ll_style"
        android:orientation="horizontal">
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/search_text_style"
            android:layout_marginRight="7dp"
            android:text="@string/model"/>
        <EditText
            android:id="@+id/et_model"
            android:layout_width="match_parent"
            style="@style/search_edit_style"
            android:layout_height="wrap_content"
            android:maxLines="1"/>
    </LinearLayout>
<!--    other  begin-->
    <LinearLayout
        android:id="@+id/ll_other"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/innerprotocols"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/search_edit_style"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/uploadprotocols"/>
            <EditText
                android:layout_width="match_parent"
                style="@style/search_edit_style"
                android:layout_height="wrap_content"
                android:maxLines="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/industrialgrade"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/chargeable"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/lowvoltage"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/highvoltage"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/lowtemperature"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            style="@style/search_ll_style"
            android:orientation="horizontal">
            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/search_text_style"
                android:layout_marginRight="7dp"
                android:text="@string/hightemperature"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/search_edit_style"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <!--    other  end-->
    <Button
        android:id="@+id/btn_search"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        style="@style/Widget.MaterialComponents.Button"
        android:text="查询"
        />
</LinearLayout>
</layout>